DMP-280 Fix non-responsive responsiveness issues - header had width 600px instead of max-width, did not adjust size on small screens

--- a/src/assets/scss/_cruk-emails.scss
+++ b/src/assets/scss/_cruk-emails.scss
@@ -45,8 +45,16 @@ h3 {
     width: 100%;
 
     .row {
-      width: 600px;
+      max-width: 600px;
       margin: auto;
+    }
+
+    .logo-su2c {
+      margin-left: 20px;
+    }
+
+    .logo-cruk-c4 {
+      margin-right: 20px;
     }
   }
 
@@ -54,7 +62,7 @@ h3 {
     width: 100%;
 
     .row.hero {
-      width: 600px;
+      max-width: 600px;
       margin: auto;
     }
   }
